--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "my-login-app",
   "version": "0.1.0",
@@ -8,12 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/postgres": "^0.7.2",
+    "axios": "^1.6.8",
+    "bootstrap-icons": "^1.11.3",
     "moment": "^2.30.1",
     "openssl": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
